fix: user better fitting verifying and add version at for openapi
